test/sh/error/function_param_bad_type.sk
external f(x: int)

x := false

f(x)
